<resources>
    <string name="app_name">Trackflix</string>
    <string name="title_activity_main">Trackflix</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Title</string>
    <string name="goal">Goal</string>
    <string name="watched">Already completed</string>
    <string name="book">Book</string>
    <string name="movie">Movie</string>
    <string name="series">Series</string>
    <string name="game">Game</string>
    <string name="add">Add</string>
    <string name="update">Update</string>
    <string name="hours"> Hours</string>
    <string name="sides">Pages</string>
    <string name="backlog">Backlog</string>
    <string name="inProgress">In Progress</string>
    <string name="finished">Finished</string>
    <string name="cancelled">Cancelled</string>
    <string name="back">Back</string>
    <string name="reroll">Reroll</string>
    <string name="randFragError">"The provided List contains no Elements that haven\'t been watched yet.\n Please check if u have trackables that have the status in Progress or in Backlog!"</string>
    <string name="all">All</string>
    <string name="RandFragUserinteraction1">U have already consumed:</string>
    <string name="randFragUserinteraction2">out of</string>
    <string name="randFragUserinteraction3">"So there is still "</string>
    <string name="randFragUserInteraction4">" left for u to enjoy!"</string>
    <string name="sortingCriteria">Sort by</string>
    <string name="filter">Filter by</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="created">Created</string>
    <string name="priority">Priority</string>
    <string name="completion">Completion</string>
    <string name="spent">Spent</string>
    <string name="expected">Expected</string>
    <string name="descending">Descending</string>
    <string name="ascending">Ascending</string>
    <string name="alphabetical">Alphabetical</string>
    <string name="notReleased">not yet released</string>
    <string name="releaseDate">Release Date</string>
    <string name="Statistics">Statistics</string>
    <string name="absoluteProgress">%1$d/%2$d %3$s</string>
    <string name="percentageProgress">%1$d%%</string>
    <string name="our_random_suggestion_for_u_is">Our random suggestion for u is:</string>
</resources>