<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sortingCriteria"
            android:textColor="#03D9C4">
        </TextView>

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/createdRb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/created" />

                <RadioButton
                    android:id="@+id/priorityRB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/priority" />

                <RadioButton
                    android:id="@+id/completionRb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/completion" />

                <RadioButton
                    android:id="@+id/spentRb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/spent" />

                <RadioButton
                    android:id="@+id/expectedRb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/expected" />

            </RadioGroup>

        </HorizontalScrollView>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#03D9C4" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/filter"
            android:textColor="#03D9C4">
        </TextView>



        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/bookCheckbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/book"/>

                <CheckBox
                    android:id="@+id/movieCheckbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/movie" />

                <CheckBox
                    android:id="@+id/seriesCheckbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/series" />

                <CheckBox
                    android:id="@+id/gameCheckbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/game" />
            </LinearLayout>
        </HorizontalScrollView>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#03D9C4"
            android:layout_marginBottom="4dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:id="@+id/btn_cancel"
                android:layout_weight="1" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ok"
                android:id="@+id/btn_ok"
                android:layout_weight="1"
                android:layout_marginStart="9dp"/>
        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>