<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.add.AddFragment">

    <EditText
        android:id="@+id/trackableTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:ems="10"
        android:hint="@string/title"
        android:importantForAutofill="no"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/trackableGoal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/goal"
        android:inputType="number"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/trackableTitle"
        android:importantForAutofill="no" />

    <RadioGroup
        android:id="@+id/trackableType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/trackableGoal">

        <RadioButton
            android:id="@+id/book"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/book" />

        <RadioButton
            android:id="@+id/movie"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/movie" />

        <RadioButton
            android:id="@+id/series"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/series" />

        <RadioButton
            android:id="@+id/game"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/game" />

    </RadioGroup>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/trackableType" />



</androidx.constraintlayout.widget.ConstraintLayout>