<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.update.UpdateFragment">

    <EditText
        android:id="@+id/trackableTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:hint="@string/title"
        android:importantForAutofill="no"
        android:inputType="text"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:id="@+id/lLWatched"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="32dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/trackableTitle">

        <EditText
            android:id="@+id/trackableCompleted"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/watched"
            android:importantForAutofill="no"
            android:inputType="number"
            android:minHeight="48dp" />

        <TextView
            android:id="@+id/tVWatchedType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:minHeight="48dp"
            android:text=""
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lLGoal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="32dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lLWatched">

        <EditText
            android:id="@+id/trackableGoal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/goal"
            android:importantForAutofill="no"
            android:inputType="number"
            android:minHeight="48dp" />

        <TextView
            android:id="@+id/tVGoalType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:minHeight="48dp"
            android:text=""
            android:textSize="18sp" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/lLPrio"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/trackableType">

        <TextView
            android:id="@+id/tvPrio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="Priority"
            android:textSize="18sp" />

        <RatingBar
            android:id="@+id/priorityRB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="5"
            android:progressDrawable="@drawable/ratingbar"
            android:stepSize="0.5" />
    </LinearLayout>

    <RadioGroup
        android:id="@+id/trackableType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="32dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lLGoal">

        <RadioButton
            android:id="@+id/book"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/book" />

        <RadioButton
            android:id="@+id/movie"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/movie" />

        <RadioButton
            android:id="@+id/series"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/series" />

        <RadioButton
            android:id="@+id/game"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/game" />

    </RadioGroup>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/update"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lLPrio" />




</androidx.constraintlayout.widget.ConstraintLayout>